--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "_from": "ngx-countdown-timer@0.1.7",
-  "_id": "ngx-countdown-timer@0.1.7",
+  "_from": "ngx-countdown-timer",
+  "_id": "ngx-countdown-timer@0.1.9",
   "_inBundle": false,
-  "_integrity": "sha512-iSJ+KVRnEyfrP+Cnjy7iGEJAYfLJVmncSuQMFqjGDIqIkvLBsktaDUxcIVT47/Ae4G/mvWPsxWAXTMZtjcJ/HQ==",
+  "_integrity": "sha512-vdYV6ni8DCmz9UtVbMrBVVAuffZYTioqIXVJBgXnS5xyCA5/TbNN74Mfxw3chrQlYLlpmQeuw9v93lzNrKv4Pw==",
   "_location": "/ngx-countdown-timer",
   "_phantomChildren": {},
   "_requested": {
-    "type": "version",
+    "type": "tag",
     "registry": true,
-    "raw": "ngx-countdown-timer@0.1.7",
+    "raw": "ngx-countdown-timer",
     "name": "ngx-countdown-timer",
     "escapedName": "ngx-countdown-timer",
-    "rawSpec": "0.1.7",
+    "rawSpec": "",
     "saveSpec": null,
-    "fetchSpec": "0.1.7"
+    "fetchSpec": "latest"
   },
   "_requiredBy": [
+    "#USER",
     "/"
   ],
-  "_resolved": "https://registry.npmjs.org/ngx-countdown-timer/-/ngx-countdown-timer-0.1.7.tgz",
-  "_shasum": "d16ec1272b22fa184926e29b913c3a05f76c5dd5",
-  "_spec": "ngx-countdown-timer@0.1.7",
-  "_where": "C:\\Users\\vikas\\OneDrive\\Desktop\\quark-front",
+  "_resolved": "git+https://github.com/vikasprashar99/ngx-countdown-timer.git#48899357722e77937a807998700f04d2eb6d7c4e",
+  "_shasum": "f7de864b3e30e333ae2a2c093c8d0667f2e604dc",
+  "_spec": "ngx-countdown-timer",
+  "_where": "C:\\Users\\vikas\\OneDrive\\Desktop\\quark-app",
   "author": {
     "name": "MJP",
     "email": "markangelpenaranda@gmail.com"
@@ -31,6 +32,7 @@
   },
   "bundleDependencies": false,
   "deprecated": false,
+  "enableIvy":true,
   "description": "## Installation",
   "homepage": "https://github.com/vikasprashar99/ngx-countdown-timer#readme",
   "jsnext:main": "ngx-countdown-timer.js",
@@ -51,5 +53,5 @@
     "url": "git+https://github.com/vikasprashar99/ngx-countdown-timer.git"
   },
   "typings": "ngx-countdown-timer.d.ts",
-  "version": "0.1.7"
+  "version": "0.1.9"
 }
